2002-11-17  John Levon  <levon@movementarian.org>

	* QGraphics.C: some fixes from Herbert & me
 
2002-11-15  Juergen Spitzmueller  <j.spitzmueller@gmx.de>
 
 	* FileDialog.C: fix empty mask string
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QLImage.C: implement monochrome, and fake grayscale
 
2002-11-17  John Levon  <levon@movementarian.org>

	* qfont_loader.h:
	* qfont_loader.C: fix totally broken update code
 
2002-11-17  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* qcoloritem.h:
	* qcoloritem.C:
	* ui/QPrefColorsModule.ui:
	* QPrefs.C:
	* QPrefsDialog.h:
	* QPrefsDialog.C: implement colors. We're done !
 
2002-11-17  John Levon  <levon@movementarian.org>

	* FileDialog.C:  split into open/save so open
	  no longer says "Save" !
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QPrefsDialog.h:
	* QPrefsDialog.C: implement converters
 
2002-11-17  John Levon  <levon@movementarian.org>

	* QPrefsDialog.C:
	* QPrefs.C: implement formats
 
2002-11-17  John Levon  <levon@movementarian.org>

	* fontloader.C: disable crashing code for now

	* QPrefs.h:
	* QPrefs.C:
	* QPrefsDialog.C: implement most prefs load/save
 
2002-11-17  John Levon  <levon@movementarian.org>

	* ui/QPref*:
	* QPrefsDialog.C:
	* QPrefs.C: more work
 
2002-11-15  Edwin Leuven  <leuven@fee.uva.nl>

	* QTabular.C: compile fixes
	
2002-11-15  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QTabularDialog.ui: some relabelling
	
2002-11-15  John Levon  <levon@movementarian.org>

	* QPrefs.h:
	* QPrefs.C: some update() work
 
2002-11-15  John Levon  <levon@movementarian.org>

	* QPrefs.C: add #if 0 xforms code for working on

	* QTabular.C: remove some handled #if 0 code
 
2002-11-15  John Levon  <levon@movementarian.org>

	* qsetborder.h:
	* qsetborder.C: fix ws
 
2002-11-15  John Levon  <levon@movementarian.org>

	* QTabularDialog.h:
	* QTabularDialog.C:
	* QTabular.C: add some stuff
 
2002-11-15  John Levon  <levon@movementarian.org>

	* Makefile.dialogs:
	* Makefile.am: